# iphoneclaw

./: .gitignore  LICENSE  README.md  README.zh.md  WORKER_DIARY.md  pyproject.toml
.claude/skills/iphoneclaw/: SKILL.md
action_scripts/common/: open_app_spotlight.txt
iphoneclaw/: __main__.py  cli.py  config.py  constants.py  types.py
iphoneclaw/agent/: __init__.py  conversation.py  coords.py  executor.py  loop.py  recorder.py
iphoneclaw/automation/: __init__.py  cache.py  fingerprint.py  router.py
iphoneclaw/macos/: __init__.py  applescript_runner.py  applescript_typing.py  capture.py  input_keyboard.py  input_mouse.py  ocr_vision.py  permissions.py  user_input_monitor.py  window.py
iphoneclaw/model/: __init__.py  client.py  image.py  prompt_v15.py
iphoneclaw/parse/: __init__.py  action_parser.py  hotkey_map.py
iphoneclaw/supervisor/: __init__.py  hub.py  server.py  state.py
tests/: test_action_parser.py  test_fingerprint.py  test_l0_cache.py
